Fix dropdown alignment

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -28,6 +28,10 @@
 		.navbar .navbar-inner .nav {
 			float: right;
 			margin-right: 0;
+
+			.dropdown-menu {
+				text-align: right;
+			}
 		}
 	}
 }
